# kefir

./: .gitignore  pyproject.toml
test_task/: settings.py
