[tool.poetry]
name = "kefir"
version = "0.1.0"
description = "test task"
authors = ["Dobro <matematikaigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
pytest = "^7.0.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
